Revision history for {{$dist->name}}

{{$NEXT}}

0.03_04   2016-01-11 03:56:44 -0500
  - Fixes to produce dynamic libraries on FreeBSD10.x
  - Fixes for more robust dynamic library scanning
  - Require Alien::Base 0.024 on Windows
    (for https://github.com/Perl5-Alien/Alien-Base/pull/139)

0.03_03   2016-01-05 13:17:30 -0500
  - Use attach instead of function in t/ffi.t to see
    if it is more reliable.

0.03_01   2016-01-04 20:44:08 -0500
  - Apply patch to expose add_dic via the C interface
    https://github.com/hunspell/hunspell/pull/355
    optionally used by Text::Hunspell::FFI
  - Included additional Test::Alien based tests.
    These are required for dev releases, but may
    be optional (for now) on production releases.

0.03      2015-12-26 17:07:31 -0700
  - Production release identical to 0.02_03

0.02_03   2015-12-24 11:02:40 -0700
  - Clean up dynamic libraries from old installs

0.02_02   2015-12-23 20:01:41 -0700
  - Better C++ diagnostics
  - Compile test is mandatory (t/compile.t) but
    the link/run stage is not mandatory because
    C++ support in Test::CChecker is flaky, and
    doesn't resemble how Alien::Hunspell is used
    in practice anyway.

0.02_01   2015-12-22 22:53:16 -0700
  - Build on windows

0.02      2015-07-03 10:09:00 -0400
  - Bump required version of Test::CChecker

0.01      2015-07-02 16:49:50 -0400
  - initial version