@@ -17,6 +17,8 @@ alien_repo            = http://downloads.sourceforge.net/hunspell/
 alien_exact_filename  = hunspell-1.3.3.tar.gz
 alien_bin_requires    = Alien::patch = 0.06
 appveyor              = u2sbefws5nbiyjbj
+diag                  = +Test::Stream
+diag                  = +Test::Alien
 
 ; submitted and accepted to upstream:
 ; https://github.com/hunspell/hunspell/pull/354
@@ -63,6 +65,8 @@ remove = base
 remove = ExtUtils::CppGuess
 remove = Text::ParseWords
 remove = File::Glob
+remove = Test::Alien
+remove = Test::Stream
 
 [Author::Plicease::Upload]
 cpan = 1
