@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Test::Alien and Test::Stream are optional test
+    dependencies for the production version
+  - Otherwise identical
 
 0.03_04   2016-01-11 03:56:44 -0500
   - Fixes to produce dynamic libraries on FreeBSD10.x
